Added compatibility to Java 20